Add NM Store to apps.json

--- a/lib/apps.json
+++ b/lib/apps.json
@@ -4711,6 +4711,16 @@
       "icon": "Nginx.png",
       "website": "nginx.org"
     },
+    "NM Store": {
+      "cats": [
+        6
+      ],
+      "html": [
+        "<div class=\"nm-container",
+        "<div class=\"nmmenu"
+      ],
+      "website": "https://www.netmechanics.gr/"
+    },
     "OWL Carousel": {
       "cats": [
         5,
